; ModuleID = '/home/carl/AnghaBench/openssl/crypto/asn1/extr_a_int.c_asn1_string_get_uint64.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/asn1/extr_a_int.c_asn1_string_get_uint64.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32 }

@ASN1_F_ASN1_STRING_GET_UINT64 = common dso_local global i32 0, align 4
@ERR_R_PASSED_NULL_PARAMETER = common dso_local global i32 0, align 4
@V_ASN1_NEG = common dso_local global i32 0, align 4
@ASN1_R_WRONG_INTEGER_TYPE = common dso_local global i32 0, align 4
@ASN1_R_ILLEGAL_NEGATIVE_VALUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, %struct.TYPE_3__*, i32)* @asn1_string_get_uint64 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @asn1_string_get_uint64(i32* %0, %struct.TYPE_3__* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_3__*, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %6, align 8
  store i32 %2, i32* %7, align 4
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %9 = icmp eq %struct.TYPE_3__* %8, null
  br i1 %9, label %10, label %14

10:                                               ; preds = %3
  %11 = load i32, i32* @ASN1_F_ASN1_STRING_GET_UINT64, align 4
  %12 = load i32, i32* @ERR_R_PASSED_NULL_PARAMETER, align 4
  %13 = call i32 @ASN1err(i32 %11, i32 %12)
  store i32 0, i32* %4, align 4
  br label %47

14:                                               ; preds = %3
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load i32, i32* @V_ASN1_NEG, align 4
  %19 = xor i32 %18, -1
  %20 = and i32 %17, %19
  %21 = load i32, i32* %7, align 4
  %22 = icmp ne i32 %20, %21
  br i1 %22, label %23, label %27

23:                                               ; preds = %14
  %24 = load i32, i32* @ASN1_F_ASN1_STRING_GET_UINT64, align 4
  %25 = load i32, i32* @ASN1_R_WRONG_INTEGER_TYPE, align 4
  %26 = call i32 @ASN1err(i32 %24, i32 %25)
  store i32 0, i32* %4, align 4
  br label %47

27:                                               ; preds = %14
  %28 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %29 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = load i32, i32* @V_ASN1_NEG, align 4
  %32 = and i32 %30, %31
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %34, label %38

34:                                               ; preds = %27
  %35 = load i32, i32* @ASN1_F_ASN1_STRING_GET_UINT64, align 4
  %36 = load i32, i32* @ASN1_R_ILLEGAL_NEGATIVE_VALUE, align 4
  %37 = call i32 @ASN1err(i32 %35, i32 %36)
  store i32 0, i32* %4, align 4
  br label %47

38:                                               ; preds = %27
  %39 = load i32*, i32** %5, align 8
  %40 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %41 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %40, i32 0, i32 2
  %42 = load i32, i32* %41, align 4
  %43 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %44 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %43, i32 0, i32 1
  %45 = load i32, i32* %44, align 4
  %46 = call i32 @asn1_get_uint64(i32* %39, i32 %42, i32 %45)
  store i32 %46, i32* %4, align 4
  br label %47

47:                                               ; preds = %38, %34, %23, %10
  %48 = load i32, i32* %4, align 4
  ret i32 %48
}

declare dso_local i32 @ASN1err(i32, i32) #1

declare dso_local i32 @asn1_get_uint64(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
